--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1 class="typing-text"></h1>
                     <script> //Typewriter effect
                         let title = document.querySelector('.typing-text');
-                        const text = ["Radiography!", "CT Scans!", "X-Rays!", "Ultrasonography!"];
+                        const text = ["Radiogists", "CT Scans", "X-Rays", "Ultrasonography"];
                         let index = 0;
                         let i = 0;
                         let increasing = true;
@@ -79,18 +79,14 @@
         </div>
     </div>
     <div class="second-body bodies reveal">
-        <h1>Heading Text</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet debitis reprehenderit laboriosam modi
-            tempore tempora temporibus, dolor nihil nobis veniam. Quidem accusantium consectetur, soluta optio illum
-            error fuga hic quia accusamus totam. Minima at ullam ducimus, illo consequatur, aliquam necessitatibus
-            praesentium cum ipsum atque nulla. Quos amet labore accusantium repudiandae molestias quis rerum numquam
-            natus debitis quas, fuga adipisci a voluptas dolores, beatae tenetur ex qui explicabo error aliquid modi.
-            Non dolorem provident dolore placeat quo labore eaque id laborum iure soluta obcaecati ex, culpa nihil
-            dolor, itaque ducimus deserunt nesciunt assumenda mollitia magni illo rerum sequi? Quaerat nihil magni
-            voluptate tenetur repudiandae atque voluptatum aspernatur nesciunt nulla, possimus cupiditate eaque delectus
-            a corporis, illo consectetur ipsa! Illum accusamus, fuga, praesentium hic error alias ad eligendi aut quam
-            eum quae dolores et earum dignissimos voluptatibus modi inventore sequi temporibus. Ut, ad iusto ullam rerum
-            eligendi consequuntur quasi mollitia rem vitae.</p>
+        <h1>Reimagining Radioraphy!</h1>
+        <p>We as Trail Blazers envision a world where anybody can get a detailed analysis of his/her
+        Radiology Scan in seconds, this being said regardless of whether the scan was at a super-speciality
+        clinic or a local Radiologist, no more Queues, no more head scratching to understand what's in those
+        scans.<br>
+        The solutions we offer can handle X-Rays, CT-Scans and Ultrasonography images.All you need to do is h
+        head over to the Scan page and upload a clear picture of your Scan, and let your personal Radiologists
+        do the job!!</p>
     </div>
     <script> //Reveal on scroll
         window.addEventListener('scroll', reveal);
